--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <meta name="copyright" content="© 2025 sandokan.cat">
     <meta name="subject" content="Curriculum Vitae de Gonzalo Cabezas">
     <meta name="abstract" content="Soy un desarrollador Front-End en busca de empleo en Barcelona">
-    <meta name="identifier-URL" content="http://sandokan.cat/CV/">
+    <meta name="identifier-URL" content="http://sandokan.cat/">
 
     <!-- CONTENT CLASSIFICATION -->
     <meta name="category" content="Tecnología, Desarrollo Web">
