--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="description" content="¿Buscas un Frontend? ¿Necesitas una Web?">
 
     <!-- CANONICAL URL -->
-    <link rel="canonical" href="http://sandokan.cat/">
+    <link rel="canonical" href="https://sandokan.cat/">
 
     <!-- KEYWORDS FOR SEARCH ENGINES (LOW IMPACT) -->
     <meta name="keywords" content="Gonzalo Cabezas Núñez, sandokan.cat, Sandokan, Frontend Dev, Front-End Developer, Curriculum Vitae">
@@ -27,8 +27,8 @@
     <meta property="og:site_name" content="Gonzalo Cabezas - CV">
     <meta property="og:title" content="Gonzalo Cabezas - CV">
     <meta property="og:description" content="¿Buscas un Frontend? ¿Necesitas una Web?">
-    <meta property="og:url" content="http://sandokan.cat/?version=1">
-    <meta property="og:image" content="http://sandokan.cat/img/og-img.jpg?version=1">
+    <meta property="og:url" content="https://sandokan.cat/?version=1">
+    <meta property="og:image" content="https://sandokan.cat/img/og-img.jpg?version=1">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
@@ -42,7 +42,7 @@
     <meta property="og:profile:last_name" content="Cabezas">
     <meta property="og:profile:gender" content="male">
     <meta property="og:profile:username" content="sandokanCat">
-    <meta property="og:profile:picture" content="http://sandokan.cat/img/foto_gonzalo.png">
+    <meta property="og:profile:picture" content="https://sandokan.cat/img/foto_gonzalo.png">
 
     <!-- FAVICON -->
     <link rel="icon" href="img/favicon.svg" type="image/svg+xml">
@@ -68,7 +68,7 @@
     <meta name="copyright" content="© 2025 sandokan.cat">
     <meta name="subject" content="Curriculum Vitae de Gonzalo Cabezas">
     <meta name="abstract" content="Soy un desarrollador Front-End en busca de empleo en Barcelona">
-    <meta name="identifier-URL" content="http://sandokan.cat/">
+    <meta name="identifier-URL" content="https://sandokan.cat/">
 
     <!-- CONTENT CLASSIFICATION -->
     <meta name="category" content="Tecnología, Desarrollo Web">
