--- a/index.html
+++ b/index.html
@@ -239,32 +239,30 @@
             <div id="right-panel">
                 <section>
                     <h4>Estudios</h4>
-                    <div class="inner-container">
-                        <article>
-                            <h5><strong>Desarrollo de aplicaciones con tecnologias Web</strong> <span>(cursando)</span></h5>
-                            <h6>Institució Pau Casals</h6>
-                            <ol>
-                                <li><abbr title="JavaScript Object Notation">JSON</abbr> y <abbr title="Asynchronous JavaScript and XML">AJAX</abbr></li>
-                                <li>Java y <abbr title="Hypertext Preprocessor">PHP</abbr> <span>(próximamente)</span></li>
-                            </ol>
-                        </article>
-                        <article>
-                            <h5>Confección y publicación de páginas web</h5>
-                            <h6>ADAMS Formación</h6>
-                            <ol>
-                                <li>
-                                    <abbr title="Hypertext Markup Language">HTML5</abbr> y <abbr title="Cascading Style Sheets">CSS3</abbr>
-                                </li>
-                                <li>
-                                    <a class="modal-link" href="doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-JSyPW_gonzalo.pdf"><abbr title="JavaScript">JS</abbr> Vanilla y publicación web</a>
-                                </li>
-                                <li>
-                                    <a class="modal-link" href="doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-FC_gonzalo.pdf">Formación complementaria</a>
-                                </li>
-                            </ol>
-                        </article>
-                    </div>
                     <article>
+                        <h5><strong>Desarrollo de aplicaciones con tecnologias Web</strong> <span>(cursando)</span></h5>
+                        <h6>Institució Pau Casals</h6>
+                        <ol>
+                            <li><abbr title="JavaScript Object Notation">JSON</abbr> y <abbr title="Asynchronous JavaScript and XML">AJAX</abbr></li>
+                            <li>Java y <abbr title="Hypertext Preprocessor">PHP</abbr> <span>(próximamente)</span></li>
+                        </ol>
+                    </article>
+                    <article>
+                        <h5>Confección y publicación de páginas web</h5>
+                        <h6>ADAMS Formación</h6>
+                        <ol>
+                            <li>
+                                <abbr title="Hypertext Markup Language">HTML5</abbr> y <abbr title="Cascading Style Sheets">CSS3</abbr>
+                            </li>
+                            <li>
+                                <a class="modal-link" href="doc/IFCD0110-JSyPW_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-JSyPW_gonzalo.pdf"><abbr title="JavaScript">JS</abbr> Vanilla y publicación web</a>
+                            </li>
+                            <li>
+                                <a class="modal-link" href="doc/IFCD0110-FC_gonzalo.pdf" target="_blank" data-modal="doc/IFCD0110-FC_gonzalo.pdf">Formación complementaria</a>
+                            </li>
+                        </ol>
+                    </article>
+                    <article id="carousel">
                         <h6>Otros certificados</h6>
                         <!-- CAROUSEL -->
                         <noscript> <!-- FALLBACK -->
@@ -309,24 +307,22 @@
                         </figure>
                         <!--//CAROUSEL END -->
                     </article>
-                    <div class="inner-container">
-                        <article>
-                            <h6>Universidad Nacional de Educación a Distancia</h6>
-                            <ol>
-                                <li>
-                                    <a class="modal-link" href="doc/accesoUNED_gonzalo.pdf" target="_blank" data-modal="doc/accesoUNED_gonzalo.pdf">Acceso a la universidad</a>
-                                </li>
-                            </ol>
-                        </article>
-                        <article>
-                            <h6>IES Joan Coromines</h6>
-                            <ol>
-                                <li>
-                                    <a class="modal-link" href="doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="doc/certificatESO_gonzalo.pdf">Certificado en <abbr title="Educación Secundaria Obligatoria">ESO</abbr></a>
-                                </li>
-                            </ol>
-                        </article>
-                    </div>
+                    <article>
+                        <h6>Universidad Nacional de Educación a Distancia</h6>
+                        <ol>
+                            <li>
+                                <a class="modal-link" href="doc/accesoUNED_gonzalo.pdf" target="_blank" data-modal="doc/accesoUNED_gonzalo.pdf">Acceso a la universidad</a>
+                            </li>
+                        </ol>
+                    </article>
+                    <article>
+                        <h6>IES Joan Coromines</h6>
+                        <ol>
+                            <li>
+                                <a class="modal-link" href="doc/certificatESO_gonzalo.pdf" target="_blank" data-modal="doc/certificatESO_gonzalo.pdf">Certificado en <abbr title="Educación Secundaria Obligatoria">ESO</abbr></a>
+                            </li>
+                        </ol>
+                    </article>
                 </section>
                 <section>
                     <h4>Experiencia laboral</h4>
