try inject ld+json

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
     ADD BAIDU, NAVER AND OTHERS -->
 
     <!-- SCHEMA LD+JSON -->
-    <script type="application/ld+json">
+    <script type="module" src="js/utils/injectSchema.js"></script>
+    <!-- <script type="application/ld+json">
         {
             "@context": "https://schema.org",
             "@type": "Person",
@@ -118,7 +119,11 @@
             "knowsAbout": [
                 "HTML5",
                 "CSS3",
-                "JS Vanilla"
+                "JS Vanilla",
+                "JSON",
+                "AJAX",
+                "JAVA",
+                "PHP"
             ],
             "alumniOf": {
                 "@type": "EducationalOrganization",
@@ -132,7 +137,7 @@
                 "addressCountry": "ES"
             }
         }
-    </script>
+    </script> -->
     <!--//LD+JSON END -->
 
     <!-- COFFEE FOR REAL COFFEE LOVERS
