--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     ADD BAIDU, NAVER AND OTHERS -->
 
     <!-- SCHEMA LD+JSON -->
-    <script type="module" src="js/utils/injectSchema.js"></script>
+    <script src="js/utils/injectSchema.js"></script>
     <!-- <script type="application/ld+json">
         {
             "@context": "https://schema.org",
