--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- TITLE & META DESCRIPTION FOR SEO -->
     <title>Gonzalo Cabezas - CV</title>
-    <meta name="description" content="¿Buscas un Frontend? ¿Necesitas una Web?">
+    <meta name="description" content="Looking for a Front-end? Need a website?">
 
     <!-- CANONICAL URL -->
     <link rel="canonical" href="https://sandokan.cat/">
@@ -24,17 +24,17 @@
 
     <!-- OPEN GRAPH FOR SOCIAL MEDIA -->
     <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Gonzalo Cabezas - CV">
+    <meta property="og:site_name" content="sandokan.cat">
     <meta property="og:title" content="Gonzalo Cabezas - CV">
-    <meta property="og:description" content="¿Buscas un Frontend? ¿Necesitas una Web?">
+    <meta property="og:description" content="Looking for a Front-end? Need a website?">
     <meta property="og:url" content="https://sandokan.cat/?version=1">
     <meta property="og:image" content="https://sandokan.cat/img/og-img.jpg?version=1">
     <meta property="og:image:type" content="image/jpeg">
     <meta property="og:image:width" content="200">
     <meta property="og:image:height" content="200">
-    <meta property="og:image:alt" content="Curriculum Vitae de Gonzalo Cabezas">
+    <meta property="og:image:alt" content="Gonzalo Cabezas, Curriculum Vitae">
     <meta property="og:locale" content="es_ES">
-    <meta property="og:article:section" content="Tecnología, Desarrollo Web">
+    <meta property="og:article:section" content="Technology, Web Development">
     <meta property="og:article:tag" content="Frontend Developer">
 
     <!-- OPTIONAL OG PROFILE INFO -->
@@ -62,16 +62,16 @@
     <meta name="format-detection" content="telephone=no, address=no, date=no">
 
     <!-- AUTHORSHIP & CONTACT -->
-    <meta name="author" content="Gonzalo Cabezas Núñez">
-    <meta name="publisher" content="Gonzalo Cabezas Núñez">
+    <meta name="author" content="sandokan.cat">
+    <meta name="publisher" content="sandokan.cat">
     <meta name="reply-to" content="dev@sandokan.cat">
     <meta name="copyright" content="© 2025 sandokan.cat">
-    <meta name="subject" content="Curriculum Vitae de Gonzalo Cabezas">
-    <meta name="abstract" content="Soy un desarrollador Front-End en busca de empleo en Barcelona">
+    <meta name="subject" content="Gonzalo Cabezas, Curriculum Vitae">
+    <meta name="abstract" content="I'm a Frontend developer looking for a job in Barcelona">
     <meta name="identifier-URL" content="https://sandokan.cat/">
 
     <!-- CONTENT CLASSIFICATION -->
-    <meta name="category" content="Tecnología, Desarrollo Web">
+    <meta name="category" content="Technology, Web Development">
     <meta name="rating" content="general">
 
     <!-- HUMANS TXT (CREDITS FILE) -->
@@ -93,15 +93,14 @@
     ADD BAIDU, NAVER AND OTHERS -->
 
     <!-- SCHEMA LD+JSON -->
-    <script src="js/utils/injectSchema.js"></script>
-    <!-- <script type="application/ld+json">
+    <script type="application/ld+json">
         {
             "@context": "https://schema.org",
             "@type": "Person",
             "name": "Gonzalo Cabezas Núñez",
             "jobTitle": "Front-End Developer",
             "url": "https://sandokan.cat/",
-            "description": "¿Buscas un Frontend? ¿Necesitas una Web?",
+            "description": "Looking for a Front-end? Need a website?",
             "image": "https://sandokan.cat/img/og-img.jpg?version=1",
             "sameAs": [
                 "https://linkedin.com/in/sandokanCat",
@@ -137,7 +136,7 @@
                 "addressCountry": "ES"
             }
         }
-    </script> -->
+    </script>
     <!--//LD+JSON END -->
 
     <!-- COFFEE FOR REAL COFFEE LOVERS
