--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             ],
             "alumniOf": {
                 "@type": "EducationalOrganization",
-                "name": "Institució Pau Casals",
+                "name": "Institució Pau Casals"
             },
             "address": {
                 "@type": "PostalAddress",
