better js detection

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <noscript> <!-- FALLBACK -->
                     <a id="dark-fallback" href="dark-index.html" aria-label="Alternar Modo oscuro">🌙</a>
                 </noscript>
-                <button id="theme-dark-btn" aria-label="Alternar modo oscuro">🌓</button>
+                <button id="theme-dark-btn" class="js-disabled" aria-label="Alternar modo oscuro">🌓</button>
                 <!--//END DARK MODE -->
                 <!-- LANG DROPDOWN MENU -->
                 <noscript> <!-- FALLBACK -->
@@ -174,7 +174,7 @@
                     <button aria-label="Español">🇪🇸</button>
                     <button aria-label="English">🇬🇧</button>
                 </noscript>
-                <div id="lang-menu" class="lang-selector">
+                <div id="lang-menu" class="lang-selector js-disabled">
                     <button id="lang-toggle" aria-label="Català">🏴</button>
                     <div id="lang-options" class="hidden">
                         <button data-lang="ca" aria-label="Español">🇪🇸</button>
@@ -307,7 +307,7 @@
                                 </li>
                             </ol>
                         </noscript>
-                        <figure class="carousel-container">
+                        <figure class="carousel-container js-disabled">
                             <div class="carousel-imgs">
                                 <ol class="carousel-track" aria-live="polite"></ol>
                             </div>
@@ -404,7 +404,7 @@
                                 </ol>
                             </aside>
                         </noscript>
-                        <aside class="other-links" id="burger-nav">
+                        <aside class="other-links js-disabled" id="burger-nav">
                             <button id="burger-btn" aria-label="Menú de repositorios" aria-expanded="false">
                                 <span id="burger-icon">
                                     <span id="burger-icon-top"></span>
@@ -452,7 +452,7 @@
         <footer id="cookies-bar" style="display: block;">
             <p>
                 🍪🐱 <strong>sandokan.cat</strong> respeta tu privacidad, <em>No rastreamos</em>, solo medimos visitas anónimas — (si aceptas).
-                <button id="accept-cookies" aria-label="Seguir navegando">Continuar</button> | <a id="info-cookies" href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)" target="_blank" rel="noopener noreferrer" aria-label="Más info sobre cookies"> ¿Qué es una cookie? </a>
+                <button id="accept-cookies" aria-label="Seguir navegando">Continuar</button> | <a id="info-cookies" href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)" target="_blank" rel="noopener noreferrer" aria-label="Más información sobre cookies"> ¿Qué es una cookie? </a>
             </p>
         </footer>
         <!--//COOKIES END -->
