--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
                                 </ol>
                             </aside>
                         </noscript>
-                        <aside class="other-links" class="js-disabled" id="burger-nav">
+                        <aside class="other-links js-disabled" id="burger-nav">
                             <button id="burger-btn" aria-label="Menú de repositorios" aria-expanded="false">
                                 <span id="burger-icon">
                                     <span id="burger-icon-top"></span>
