debugging nav svg

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                     </button>
                     <button aria-label="English">
                         <svg role="img" aria-label="English" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                            <use href="img/sprite.svg#greatGritain-flag"></use>
+                            <use href="img/sprite.svg#greatBritain-flag"></use>
                         </svg>
                     </button>
                 </noscript>
