--- a/index.html
+++ b/index.html
@@ -169,35 +169,35 @@
                 <noscript> <!-- FALLBACK -->
                     <button aria-label="Català">
                         <svg role="img" aria-label="Català" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                            <use href="img/sprite.svg#catalonia-flag"></use>
+                            <use href="img/sprite.svg#cat-flag"></use>
                         </svg>
                     </button>
                     <button aria-label="Español">
                         <svg role="img" aria-label="Español" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                            <use href="img/sprite.svg#spain-flag"></use>
+                            <use href="img/sprite.svg#es-flag"></use>
                         </svg>
                     </button>
                     <button aria-label="English">
                         <svg role="img" aria-label="English" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                            <use href="img/sprite.svg#greatBritain-flag"></use>
+                            <use href="img/sprite.svg#uk-flag"></use>
                         </svg>
                     </button>
                 </noscript>
                 <div id="lang-menu" class="lang-selector js-disabled"> <!-- JS ENABLED -->
                     <button id="lang-toggle" aria-label="Català">
                         <svg role="img" aria-label="Català" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                            <use href="img/sprite.svg#catalonia-flag"></use>
+                            <use href="img/sprite.svg#cat-flag"></use>
                         </svg>
                     </button>
                     <div id="lang-options" class="hidden">
                         <button data-lang="ca" aria-label="Español">
                             <svg role="img" aria-label="Español" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#spain-flag"></use>
+                                <use href="img/sprite.svg#es-flag"></use>
                             </svg>
                         </button>
                         <button data-lang="en" aria-label="English">
                             <svg role="img" aria-label="English" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#greatGritain-flag"></use>
+                                <use href="img/sprite.svg#uk-flag"></use>
                             </svg>
                         </button>
                     </div>
