--- a/index.html
+++ b/index.html
@@ -168,35 +168,35 @@
                 <!-- LANG DROPDOWN MENU -->
                 <noscript> <!-- FALLBACK -->
                     <button aria-label="Català">
-                        <svg role="img" aria-label="Català" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#cat-flag"></use>
                         </svg>
                     </button>
                     <button aria-label="Español">
-                        <svg role="img" aria-label="Español" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#es-flag"></use>
                         </svg>
                     </button>
                     <button aria-label="English">
-                        <svg role="img" aria-label="English" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#uk-flag"></use>
                         </svg>
                     </button>
                 </noscript>
                 <div id="lang-menu" class="lang-selector js-disabled"> <!-- JS ENABLED -->
                     <button id="lang-toggle" aria-label="Català">
-                        <svg role="img" aria-label="Català" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#cat-flag"></use>
                         </svg>
                     </button>
-                    <div id="lang-options" class="hidden">
+                    <div id="lang-options">
                         <button data-lang="ca" aria-label="Español">
-                            <svg role="img" aria-label="Español" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                            <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#es-flag"></use>
                             </svg>
                         </button>
                         <button data-lang="en" aria-label="English">
-                            <svg role="img" aria-label="English" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                            <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#uk-flag"></use>
                             </svg>
                         </button>
