--- a/index.html
+++ b/index.html
@@ -167,40 +167,38 @@
                 <!--//END DARK MODE -->
                 <!-- LANG DROPDOWN MENU -->
                 <noscript> <!-- FALLBACK -->
-                    <button aria-label="Català">
+                    <button data-lang="ca" aria-label="Català">
                         <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#cat-flag"></use>
                         </svg>
                     </button>
-                    <button aria-label="Español">
+                    <button data-lang="es" aria-label="Español">
                         <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#es-flag"></use>
                         </svg>
                     </button>
-                    <button aria-label="English">
+                    <button data-lang="en" aria-label="English">
                         <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#uk-flag"></use>
                         </svg>
                     </button>
                 </noscript>
-                <div id="lang-menu" class="lang-selector js-disabled"> <!-- JS ENABLED -->
-                    <button id="lang-toggle" aria-label="Català">
+                <div id="lang-menu" class="js-disabled"> <!-- JS ENABLED -->
+                    <button id="lang-toggle" data-lang="ca" aria-label="Català">
                         <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#cat-flag"></use>
                         </svg>
                     </button>
-                    <div id="lang-options">
-                        <button data-lang="ca" aria-label="Español">
-                            <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#es-flag"></use>
-                            </svg>
-                        </button>
-                        <button data-lang="en" aria-label="English">
-                            <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
-                                <use href="img/sprite.svg#uk-flag"></use>
-                            </svg>
-                        </button>
-                    </div>
+                    <button data-lang="es" aria-label="Español">
+                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                            <use href="img/sprite.svg#es-flag"></use>
+                        </svg>
+                    </button>
+                    <button data-lang="en" aria-label="English">
+                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                            <use href="img/sprite.svg#uk-flag"></use>
+                        </svg>
+                    </button>
                 </div>
                 <!--//LANG MENU END -->
             </nav>
