--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                 <button id="theme-dark-btn" class="js-disabled" aria-label="Alternar modo oscuro">🌓</button> <!-- JS ENABLED -->
                 <!--//END DARK MODE -->
                 <!-- LANG DROPDOWN MENU -->
-                <noscript> <!-- FALLBACK -->
+                <noscript id="lang-fallback"> <!-- FALLBACK -->
                     <button data-lang="ca" aria-label="Català">
                         <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#cat-flag"></use>
