--- a/index.html
+++ b/index.html
@@ -163,38 +163,38 @@
                 <noscript> <!-- FALLBACK -->
                     <a id="dark-fallback" href="dark-index.html" aria-label="Alternar Modo oscuro">🌙</a>
                 </noscript>
-                <button id="theme-dark-btn" class="js-disabled" aria-label="Alternar modo oscuro">🌓</button> <!-- JS ENABLED -->
+                <button id="theme-dark-btn" class="scale-icons js-disabled" aria-label="Alternar modo oscuro">🌓</button> <!-- JS ENABLED -->
                 <!--//END DARK MODE -->
                 <!-- LANG DROPDOWN MENU -->
                 <noscript id="lang-fallback"> <!-- FALLBACK -->
-                    <button data-lang="ca" aria-label="Català">
+                    <button class="scale-icons" data-lang="ca" aria-label="Català">
                         <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#cat-flag"></use>
                         </svg>
                     </button>
-                    <button data-lang="es" aria-label="Español">
+                    <button class="scale-icons" data-lang="es" aria-label="Español">
                         <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#es-flag"></use>
                         </svg>
                     </button>
-                    <button data-lang="en" aria-label="English">
+                    <button class="scale-icons" data-lang="en" aria-label="English">
                         <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#uk-flag"></use>
                         </svg>
                     </button>
                 </noscript>
                 <div id="lang-menu" class="js-disabled"> <!-- JS ENABLED -->
-                    <button id="lang-toggle" data-lang="ca" aria-label="Català">
+                    <button id="lang-toggle" class="scale-icons" data-lang="ca" aria-label="Català">
                         <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#cat-flag"></use>
                         </svg>
                     </button>
-                    <button data-lang="es" aria-label="Español">
+                    <button class="scale-icons" data-lang="es" aria-label="Español">
                         <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#es-flag"></use>
                         </svg>
                     </button>
-                    <button data-lang="en" aria-label="English">
+                    <button class="scale-icons" data-lang="en" aria-label="English">
                         <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#uk-flag"></use>
                         </svg>
@@ -331,12 +331,12 @@
                                 <ol class="carousel-track" aria-live="polite"></ol>
                             </div>
                             <aside class="carousel-control" aria-label="Controles del carrusel">
-                                <button class="carousel-back" aria-label="Retroceder">
+                                <button class="carousel-back scale-icons" aria-label="Retroceder">
                                     <svg aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                         <use href="img/sprite.svg#arrow-left"></use>
                                     </svg>
                                 </button>
-                                <button class="carousel-advance" aria-label="Avanzar">
+                                <button class="carousel-advance scale-icons" aria-label="Avanzar">
                                     <svg aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                         <use href="img/sprite.svg#arrow-right"></use>
                                     </svg>
@@ -385,7 +385,7 @@
                 <section>
                     <div class="others">
                         <h4>Otros datos</h4>
-                        <a class="other-links" href="doc/CV_gonzalo.pdf" download="CV_gonzalo.pdf" aria-label="Descargar CV pdf">
+                        <a class="other-links scale-icons" href="doc/CV_gonzalo.pdf" download="CV_gonzalo.pdf" aria-label="Descargar CV pdf">
                             <svg class="accent-2-svg" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#pdf"></use>
                             </svg>
@@ -407,14 +407,14 @@
                             <aside id="menu-fallback">
                                 <ol aria-label="Menú de repositorios">
                                     <li>
-                                        <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
+                                        <a class="scale-icons" href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
                                             <svg class="accent-2-svg" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#github"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
+                                        <a class="scale-icons" href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
                                             <svg class="accent-2-svg" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#vercel"></use>
                                             </svg>
@@ -424,7 +424,7 @@
                             </aside>
                         </noscript>
                         <aside class="other-links js-disabled" id="burger-nav"> <!-- JS ENABLED -->
-                            <button id="burger-btn" aria-label="Menú de repositorios" aria-expanded="false">
+                            <button id="burger-btn" class="scale-icons" aria-label="Menú de repositorios" aria-expanded="false">
                                 <span id="burger-icon">
                                     <span id="burger-icon-top"></span>
                                     <span id="burger-icon-middle"></span>
@@ -434,14 +434,14 @@
                             <div id="burger-links-container">
                                 <ol id="burger-links">
                                     <li>
-                                        <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
+                                        <a class="scale-icons" href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
                                             <svg class="accent-2-svg" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#github"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
+                                        <a class="scale-icons" href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
                                             <svg class="accent-2-svg" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#vercel"></use>
                                             </svg>
@@ -471,7 +471,7 @@
         <footer id="cookies-bar" style="display: block;">
             <p>
                 🍪🐱 <strong>sandokan.cat</strong> respeta tu privacidad, <em>No rastreamos</em>, solo medimos visitas anónimas — (si aceptas).
-                <button id="accept-cookies" aria-label="Seguir navegando">Continuar</button> | <a id="info-cookies" href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)" target="_blank" rel="noopener noreferrer" aria-label="Más información sobre cookies"> ¿Qué es una cookie? </a>
+                <button id="accept-cookies" class="scale-icons" aria-label="Seguir navegando">Continuar</button> | <a id="info-cookies" href="https://es.wikipedia.org/wiki/Cookie_(inform%C3%A1tica)" target="_blank" rel="noopener noreferrer" aria-label="Más información sobre cookies"> ¿Qué es una cookie? </a>
             </p>
         </footer>
         <!--//COOKIES END -->
@@ -483,7 +483,7 @@
                 <iframe id="modal-iframe" src="#" aria-label="Certificado oficial"></iframe>
             </div>
             <div id="modal-img-wrapper"></div>
-            <button id="modal-close" aria-label="Cerrar">
+            <button id="modal-close" class="scale-icons" aria-label="Cerrar">
                 <svg aria-hidden="true" width="50" height="50" preserveAspectRatio="xMinYMin meet">
                     <use href="img/sprite.svg#close"></use>
                 </svg>
