--- a/index.html
+++ b/index.html
@@ -167,35 +167,35 @@
                 <!--//END DARK MODE -->
                 <!-- LANG DROPDOWN MENU -->
                 <noscript id="lang-fallback"> <!-- FALLBACK -->
-                    <button class="scale-icons" data-lang="ca" aria-label="Català">
-                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                    <button data-lang="ca" aria-label="Català">
+                        <svg class="scale-icons" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#cat-flag"></use>
                         </svg>
                     </button>
-                    <button class="scale-icons" data-lang="es" aria-label="Español">
-                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                    <button data-lang="es" aria-label="Español">
+                        <svg class="scale-icons" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#es-flag"></use>
                         </svg>
                     </button>
-                    <button class="scale-icons" data-lang="en" aria-label="English">
-                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                    <button data-lang="en" aria-label="English">
+                        <svg class="scale-icons" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#uk-flag"></use>
                         </svg>
                     </button>
                 </noscript>
                 <div id="lang-menu" class="js-disabled"> <!-- JS ENABLED -->
-                    <button id="lang-toggle" class="scale-icons" data-lang="ca" aria-label="Català">
-                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                    <button id="lang-toggle" data-lang="ca" aria-label="Català">
+                        <svg class="scale-icons" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#cat-flag"></use>
                         </svg>
                     </button>
-                    <button class="scale-icons" data-lang="es" aria-label="Español">
-                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                    <button data-lang="es" aria-label="Español">
+                        <svg class="scale-icons" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#es-flag"></use>
                         </svg>
                     </button>
-                    <button class="scale-icons" data-lang="en" aria-label="English">
-                        <svg role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
+                    <button data-lang="en" aria-label="English">
+                        <svg class="scale-icons" role="img" width="40" height="40" preserveAspectRatio="xMinYMin meet">
                             <use href="img/sprite.svg#uk-flag"></use>
                         </svg>
                     </button>
@@ -331,13 +331,13 @@
                                 <ol class="carousel-track" aria-live="polite"></ol>
                             </div>
                             <aside class="carousel-control" aria-label="Controles del carrusel">
-                                <button class="carousel-back scale-icons" aria-label="Retroceder">
-                                    <svg aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                <button class="carousel-back" aria-label="Retroceder">
+                                    <svg class="scale-icons" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                         <use href="img/sprite.svg#arrow-left"></use>
                                     </svg>
                                 </button>
-                                <button class="carousel-advance scale-icons" aria-label="Avanzar">
-                                    <svg aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                <button class="carousel-advance" aria-label="Avanzar">
+                                    <svg class="scale-icons" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                         <use href="img/sprite.svg#arrow-right"></use>
                                     </svg>
                                 </button>
@@ -385,8 +385,8 @@
                 <section>
                     <div class="others">
                         <h4>Otros datos</h4>
-                        <a class="other-links scale-icons" href="doc/CV_gonzalo.pdf" download="CV_gonzalo.pdf" aria-label="Descargar CV pdf">
-                            <svg class="accent-2-svg" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                        <a class="other-links" href="doc/CV_gonzalo.pdf" download="CV_gonzalo.pdf" aria-label="Descargar CV pdf">
+                            <svg class="accent-2-svg scale-icons" aria-hidden="true" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                 <use href="img/sprite.svg#pdf"></use>
                             </svg>
                         </a>
@@ -407,15 +407,15 @@
                             <aside id="menu-fallback">
                                 <ol aria-label="Menú de repositorios">
                                     <li>
-                                        <a class="scale-icons" href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
-                                            <svg class="accent-2-svg" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
+                                        <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
+                                            <svg class="accent-2-svg scale-icons" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#github"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="scale-icons" href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
-                                            <svg class="accent-2-svg" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                        <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
+                                            <svg class="accent-2-svg scale-icons" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#vercel"></use>
                                             </svg>
                                         </a>
@@ -424,8 +424,8 @@
                             </aside>
                         </noscript>
                         <aside class="other-links js-disabled" id="burger-nav"> <!-- JS ENABLED -->
-                            <button id="burger-btn" class="scale-icons" aria-label="Menú de repositorios" aria-expanded="false">
-                                <span id="burger-icon">
+                            <button id="burger-btn" aria-label="Menú de repositorios" aria-expanded="false">
+                                <span id="burger-icon" class="scale-icons">
                                     <span id="burger-icon-top"></span>
                                     <span id="burger-icon-middle"></span>
                                     <span id="burger-icon-bottom"></span>
@@ -434,15 +434,15 @@
                             <div id="burger-links-container">
                                 <ol id="burger-links">
                                     <li>
-                                        <a class="scale-icons" href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
-                                            <svg class="accent-2-svg" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
+                                        <a href="https://github.com/sandokanCat?tab=repositories" target="_blank" rel="noopener noreferrer" aria-label="Mis repositorios de Frontend:">
+                                            <svg class="accent-2-svg scale-icons" role="img" aria-label="Github" width="28" height="28" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#github"></use>
                                             </svg>
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="scale-icons" href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
-                                            <svg class="accent-2-svg" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
+                                        <a href="https://vercel.com/dev-sandokan-cat" target="_blank" rel="noopener noreferrer" aria-label="Mis proyectos de Backend:">
+                                            <svg class="accent-2-svg scale-icons" role="img" aria-label="Vercel" width="30" height="30" preserveAspectRatio="xMinYMin meet">
                                                 <use href="img/sprite.svg#vercel"></use>
                                             </svg>
                                         </a>
@@ -483,8 +483,8 @@
                 <iframe id="modal-iframe" src="#" aria-label="Certificado oficial"></iframe>
             </div>
             <div id="modal-img-wrapper"></div>
-            <button id="modal-close" class="scale-icons" aria-label="Cerrar">
-                <svg aria-hidden="true" width="50" height="50" preserveAspectRatio="xMinYMin meet">
+            <button id="modal-close" aria-label="Cerrar">
+                <svg class="scale-icons" aria-hidden="true" width="50" height="50" preserveAspectRatio="xMinYMin meet">
                     <use href="img/sprite.svg#close"></use>
                 </svg>
             </button>
