--- a/index.html
+++ b/index.html
@@ -141,7 +141,8 @@
         default-src 'self';
         style-src 'self' 'nonce-randomString';
         script-src 'self' 'nonce-randomString' https://*.googletagmanager.com https://*.clarity.ms;
-        connect-src https://*.google-analytics.com https://*.analytics.google.com;"> -->
+        connect-src https://*.google-analytics.com https://*.analytics.google.com;">
+    -->
 
     <!-- MAIN JS -->
     <script type="module" src="js/main.js"></script>
